# python-playground

./: Dockerfile  docker-compose.yml  pyproject.toml
python_playground/: main.py
