[tool.poetry]
name = "python-playground"
version = "0.1.0"
description = ""
authors = ["Ville Räsänen <vjrasane@gmail.com>"]
readme = "README.md"

[tool.poe.tasks]
start = "uvicorn python_playground.main:app --reload"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"
requests = "^2.32.3"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.29.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
